--- a/refactor/20200910.md
+++ b/refactor/20200910.md
@@ -199,7 +199,7 @@ changeLabel(data, index) {
     if (data) {
         this.labels[index + 1] = this.labels[index].find(
         label => label.id === data
-        ).children_labels
+        )?.children_labels
     } else {
         this.labels.length = this.selectedLabels.length = index + 1
     }
@@ -209,7 +209,7 @@ handleTopLabelChange(data) {
     this.selectedLabels = []
     if (!data) return
     request({
-        url: `/daoyuan/api/p_labels/level_label/${data}`
+        url: `xxxxxxxxxxxx`
     }).then(res => {
         this.labels.push(res)
     })
