--- a/refactor/20200901.md
+++ b/refactor/20200901.md
@@ -1,31 +1,31 @@
 #### 在做pc主站项目的时候，为了分清楚各部分路由代码，会把路由分开模块写，但是会有新的问题，就是代码过度冗余：
 #### 例如
 ```
-import practiceRouter from '@/app/routerModules/practice';
-import getAccompanyRoutes from '@/app/routerModules/accompany';
-import getNewTpTrainRoutes from '@/app/routerModules/newTpTrain';
-import courseRouters from '@/app/routerModules/course';
-import errorRoutes from '@/app/routerModules/error';
-import coursePlayRoutes from '@/app/routerModules/coursePlay';
-import personalRoutes from '@/app/routerModules/personal';
-import homeRoutes from '@/app/routerModules/home';
-import loginRoutes from '@/app/routerModules/login';
-import cartRoutes from '@/app/routerModules/cart';
-import orderRoutes from '@/app/routerModules/order';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
+import xxxxxRouter from '@/app/routerModules/xxxxxx';
 Vue.use(Router);
 export function createRouter(store) {
     const routes = [
-        ...getAccompanyRoutes(store),
-        ...getNewTpTrainRoutes(store),
-        ...courseRouters(store),
-        practiceRouter,
-        errorRoutes,
-        coursePlayRoutes,
-        homeRoutes,
-        loginRoutes,
-        ...personalRoutes(store),
-        cartRoutes(store),
-        ...orderRoutes
+        ...xxxxxRouter(store),
+        ...xxxxxRouter(store),
+        ...xxxxxRouter(store),
+        xxxxxRouter,
+        xxxxxRouter,
+        xxxxxRouter,
+        xxxxxRouter,
+        xxxxxRouter,
+        ...xxxxxRouter(store),
+        xxxxxRouter(store),
+        ...xxxxxRouter
     ];
     ......
 }
