--- a/js/20200926.md
+++ b/js/20200926.md
@@ -38,7 +38,8 @@ add(1, 2)(3, 4) // 10
 function add() {
     let args = [...arguments]
     function sum() {
-        return add.apply(null, [...args, ...arguments])
+        // return add.apply(null, [...args, ...arguments])
+        return add.call(null, ...[...args, ...arguments])
     }
     sum.toString = () => args.reduce((a, b) => a + b)
     return sum;
