--- a/css/20200909.md
+++ b/css/20200909.md
@@ -29,7 +29,7 @@ css:
 ```
 
 ### 真正在页面上的每个tab的长度都是不固定的，发现这个问题的时候没有特别好的办法，只能暂时把每个tab都按照字数的长短固定一下。
-### 但是直觉告诉我这肯定不是最好的解决方案，于是乎本着解决问题的态度，google了一下解决方案，发现了一个很有意思的解决方案，先看看效果:
+### google了一下解决方案，发现了一个很有意思的解决方案，先看看效果:
 ![image](../assets/css/gif/hover-solution.gif)
 
 ### 解决的css中，发现了几行关键代码：
