--- a/refactor/20200901.md
+++ b/refactor/20200901.md
@@ -1,4 +1,4 @@
-#### 在做pc主站项目的时候，为了分清楚各部分路由代码，会把路由分开模块写，但是会有新的问题，就是代码过度冗余：
+#### 在做项目的时候，为了分清楚各部分路由代码，会把路由分开模块写，但是会有新的问题，就是代码过度冗余：
 #### 例如
 ```
 import xxxxxRouter from '@/app/routerModules/xxxxxx';
